# backend/app/api_route/domain/query.go
@@ -1,11 +1,16 @@
 package domain
 
-import "github.com/google/uuid"
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
 
 type ApiRoute struct {
 	Method       string    `json:"method"`
 	Path         string    `json:"path"`
 	PermissionID uuid.UUID `json:"permissionId"`
+	CreatedAt    time.Time `json:"createdAt"`
 }
 
 type ApiRouteRelation struct {
