# backend/app/auth/handler/http.go
@@ -1,0 +1,31 @@
+package handler
+
+import (
+	"backend/app/auth/domain"
+	"backend/infra/httpresponse"
+	"github.com/labstack/echo/v4"
+)
+
+type HTTP struct {
+	svc domain.Service
+}
+
+func NewHTTP(svc domain.Service) HTTP {
+	return HTTP{svc: svc}
+}
+
+func (h HTTP) Signup(c echo.Context) error {
+	ctx := c.Request().Context()
+
+	var input domain.SignupWithEmail
+	if err := c.Bind(&input); err != nil {
+		return err
+	}
+
+	result, err := h.svc.SignupWithEmail(ctx, input)
+	if err != nil {
+		return err
+	}
+
+	return httpresponse.Created(c, result)
+}
